subdir('core')
subdir('input')
subdir('intc')
subdir('ipack')
subdir('ipmi')
subdir('isa')
subdir('mem')
subdir('misc')
subdir('net')
subdir('nubus')
subdir('nvram')
subdir('pci')
subdir('pci-bridge')
subdir('pci-host')
subdir('pcmcia')
subdir('rdma')
subdir('rtc')
subdir('scsi')
subdir('sd')
subdir('semihosting')
subdir('smbios')
subdir('ssi')
subdir('timer')
subdir('tpm')
subdir('usb')
subdir('vfio')
subdir('virtio')
subdir('watchdog')
subdir('xen')
