subdir('9pfs')
subdir('acpi')
subdir('adc')
subdir('audio')
subdir('block')
subdir('char')
subdir('core')
subdir('cpu')
subdir('display')
subdir('dma')
subdir('gpio')
subdir('hyperv')
subdir('i2c')
subdir('ide')
subdir('input')
subdir('intc')
subdir('ipack')
subdir('ipmi')
subdir('isa')
subdir('mem')
subdir('misc')
subdir('net')
subdir('nubus')
subdir('nvme')
subdir('nvram')
subdir('pci')
subdir('pci-bridge')
subdir('pci-host')
subdir('pcmcia')
subdir('rdma')
subdir('rtc')
subdir('scsi')
subdir('sd')
subdir('sensor')
subdir('smbios')
subdir('ssi')
subdir('timer')
subdir('tpm')
subdir('usb')
subdir('vfio')
subdir('virtio')
subdir('watchdog')
subdir('xen')
subdir('xenpv')

subdir('alpha')
subdir('arm')
subdir('avr')
subdir('cris')
subdir('hppa')
subdir('i386')
subdir('m68k')
subdir('microblaze')
subdir('mips')
subdir('nios2')
subdir('openrisc')
subdir('ppc')
subdir('remote')
subdir('riscv')
subdir('rx')
subdir('s390x')
subdir('sh4')
subdir('sparc')
subdir('sparc64')
subdir('tricore')
subdir('xtensa')
